--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,15 +4,6 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Custom Font */
-@font-face {
-  font-family: 'Coterie';
-  src: url('/fonts/CoterieRegular.woff2') format('woff2');
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
-
 /* CSS Custom Properties for Wedding Colors */
 :root {
   --soft-greige: #D8D3CD;
@@ -78,11 +69,11 @@
 
   /* Wedding-specific styles */
   .font-script {
-    font-family: 'Coterie', serif;
+    font-family: 'Dancing Script', cursive;
   }
 
   .font-coterie {
-    font-family: 'Coterie', serif;
+    font-family: 'Dancing Script', cursive;
   }
 
   .elegent-text {
